Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================
 o 18229 email 2016-06-08
   Extended to support sending HTML emails "text/html; charset=utf-8"

 o 18228 Mail 2016-06-08
   Update lib/mail.jar from 1.3.3 to 1.5.5 https://java.net/downloads/javamail/javax.mail.jar
 
 o 18226 SubscriptionInfo 2016-05-27
   Exception handling for invalid subscription ID

 o 18223 Replication: added replication.prioDeliveryOnInitial which allows to send high prio messages during initial phase also on very first time

 o 18221 Replication: now deletes export file even if the initial update has been interrupted

 o 18219 StringPairTokenizer CSV parser fix to not loose escaped \n

 o 18217 now the /tmp/chunks is checked on every operation (and re-created if needed)

 o 18216 Fixes for StringPairTokenizer
   parseLine() no handles a single trailing quote " (at very end of line) correctly
   -> return nothing instead of clone of complete line
   CSVToMap() has new argument unescapeSeparatorChars which defaults to true
   -> Unescapes depending on seperator eg "&comma;" is unescaped to "," or "%3B" to ";"

 o 18214 modified error handling on xmlrpc when using xmlscript.

 o 18212 Replication: added replication.prioDeliveryOnInitial which allows to send high prio messages during initial phase 

 o 18210 XMLRPC fixed issue which leaded to a dead message instead of a Communication Exception when the client side callback driver was shutting down.

 o 18208 Modified the initializing handling of the xmlrcp Callack Driver
 
 o 18199 the property.keepUnresolvedProps has been added to inhibit throwing an exception if a
   dynamic property value could not be assigned 

 o 18185 Made parser a member variable based on Thierry Legrain's suggestion in SaxHandlerBase

 o 18193 Added fix for Java client side forced asynchronous mode
