@@ -3,6 +3,9 @@ The "r99999" numbers are Subversion revision numbers.
 
 Changes for current svn
 =======================
+ o 18232 email 2016-06-29
+   Extended to support sending HTML emails "text/html; charset=utf-8" also if mail has attachments
+
  o 18229 email 2016-06-08
    Extended to support sending HTML emails "text/html; charset=utf-8"
 
